compiler/integration-tests/testData/smoke/syntaxErrors/test.kt
package test

fun test() {
    val s = System.in
}